--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title> Jennifer Le</title>
   </head>
   <body>
-    <h1>Jennifer Le </h1>
-    <h3>Ex</h3>
+    <h1>Jennifer Le' Work </h1>
+    <h3>Exercises</h3>
     <ul>
-      <li>E1: 20 questions</li>
-      <li>E2: Make the grid</li>
+      <li><a href="e1/index.html">E1: 20 questions</a></li>
+      <li><a href="e2/index.html">E2: Make the grid</a></li>
     </ul>
-    <h3>Proj</h3>
+    <h3>Projects</h3>
     <ul>
-      <li><a href="p1">P1: Linking Narratives</a></li>
+      <li><a href="p1/index.html">P1: Linking Narratives</a></li>
     </ul>
 
 
