--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>I see the crystal raindrops fall</p>
+    <p>I see the <a href="../page3/index.html">crystal raindrops</a> fall</p>
   </body>
 
 </html>
