--- a/p1/page3/index.html
+++ b/p1/page3/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>And the beauty of it all</p>
+    <p>And the <a href="../page4/index.html">beauty</a> of it all</p>
   </body>
 
 </html>
