--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>To make those rainbows in my mind</p>
+    <p>To make those <a href="../page6/index.html">rainbows</a> in my mind</p>
   </body>
 
 </html>
