--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>When I think of you sometime</p>
+    <p>When I <a href="../page7/index.html">think</a> of you sometime</p>
   </body>
 
 </html>
