--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>And I wanna spend some time with you</p>
+    <p>And I wanna spend some time with <a href="../page8/index.html">you</a></p>
   </body>
 
 </html>
