--- a/p1/page8/index.html
+++ b/p1/page8/index.html
@@ -5,9 +5,9 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p> Just the two of us</p>
-    <p>We can make it if we try</p>
-    <p>Just the two of us</p>
+    <p>Just the <a href="../page9/index.html">two of us</a></p>
+    <p><a href="../page9/index.html">We</a> can make it if we try</p>
+    <p>Just the <a href="../page9/index.html">two of us</a></p>
   </body>
 
 </html>
