--- a/p1/index.html
+++ b/p1/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <h1>Just The Two Of Us</h1>
+    <h1><a href ="page2/index.html">Just The Two Of Us</a></h1>
     <h2>Grover Washington, Jr.</h2>
   </body>
 
