--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>Is when the sun comes shining through</p>
+    <p>Is when the <a href="../page5/index.html">sun</a> comes shining through</p>
   </body>
 
 </html>
