--- a/p1/page9/index.html
+++ b/p1/page9/index.html
@@ -5,9 +5,9 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p>Just the two of us</p>
-    <p>Building castles in the sky</p>
-    <p>Just the two of us</p>
+    <p>Just the <a href="../page10/index.html">two of us</a></p>
+    <p>Building <a href="../page10/index.html">castles</a> in the sky</p>
+    <p>Just the <a href="../page10/index.html">two of us</a></p>
   </body>
 
 </html>
