--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -5,7 +5,7 @@
     <title> Just The Two Of Us </title>
   </head>
   <body>
-    <p><a href="../index.html">You</a> and <a href="../index.html">I</a></p>
+    <p><a href="../page2/index.html">You</a> and <a href="../page2/index.html">I</a></p>
   </body>
 
 </html>
