--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="e1/index.html">E1: 20 questions</a></li>
       <li><a href="e2/index.html">E2: Make the grid</a></li>
-      <li><a href="">E3: Organization and Naming</a></li>
+      <li><a href="e3/index.html">E3: Organization and Naming</a></li>
       <li><a href="">E4: Site Map</a></li>
       <li><a href="">E5: Wireframes</a></li>
     </ul>
