--- a/p1/index.html
+++ b/p1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Just The Two Of Us </title>
+    <link rel="stylesheet"href="css/main.css">
   </head>
   <body>
     <h1><a href ="page2/index.html">Just The Two Of Us</a></h1>
