--- a/p1/index.html
+++ b/p1/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title> Just The Two Of Us </title>
     <link rel="stylesheet"href="css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1><a href ="page2/index.html">Just The Two Of Us</a></h1>
