--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title> Just The Two Of Us </title>
+        <link rel="stylesheet"href="../css/main.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>When I <a href="../page7/index.html">think</a> of you sometime</p>
