--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title> Jennifer Le</title>
       <link rel="stylesheet"href="css/main.css">
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">  </head>
+      
   <body>
     <h1>Jennifer Le' Work </h1>
     <h3>Exercises</h3>
