--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">  </head>
-      
+
   <body>
     <h1>Jennifer Le' Work </h1>
     <h3>Exercises</h3>
@@ -17,6 +17,7 @@
       <li><a href="e3/index.html">E3: Organization and Naming</a></li>
       <li><a href="e4/index.html">E4: Site Map</a></li>
       <li><a href="e5/index.html">E5: Wireframes</a></li>
+      <li><a href="e6/index.html">E6: Type on Screen I</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
