--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <link rel="stylesheet"href="css/main.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">  </head>
+      <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    </head>
 
   <body>
     <h1>Jennifer Le' Work </h1>
@@ -18,6 +19,7 @@
       <li><a href="e4/index.html">E4: Site Map</a></li>
       <li><a href="e5/index.html">E5: Wireframes</a></li>
       <li><a href="e6/index.html">E6: Type on Screen I</a></li>
+      <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
