--- a/e3/index.html
+++ b/e3/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>Screenshot</h3>
-    <img src="screenshot/Untitled.png" alt="Screenshot">
+    <img src="screenshot/finale3.png" alt="Screenshot">
   </body>
 
 </html>
