--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <h3>Projects</h3>
     <ul>
       <li><a href="p1/index.html">P1: Linking Narratives</a></li>
+
+      <li><a href="p2/index.html">P2: Site Planning and Wireframing</a></li>
+
     </ul>
 
 
