--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <h3>Projects</h3>
     <ul>
       <li><a href="p1/index.html">P1: Linking Narratives</a></li>
-
-      <li><a href="p2/index.html">P2: Site Planning and Wireframing</a></li>
+      <li><a href="p2/index.html">P2.3: First Mobile Designs</a></li>
 
     </ul>
 
