--- a/p2/index.html
+++ b/p2/index.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>e8</title>
+    <title>p2</title>
     <link rel="stylesheet"href="css/main.css">
   </head>
   <body>
     <h3>Home</h3>
     <img src="images/home.png" alt="home" >
+    <h3>About</h3>
+    <img src="images/about.png" alt="about" >
+    <h3>Sights</h3>
+    <img src="images/sights.png" alt="sights" >
+    <h3>24 Hours</h3>
+    <img src="images/24h.png" alt="24h" >
 
 
   </body>
