--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Jennifer Le' Work </h1>
     </header>
     <main>
-        <div class"col">
+        <div class="col">
           <h3>Exercises</h3>
           <ul>
             <li><a href="e1/index.html">E1: 20 questions</a></li>
@@ -28,7 +28,7 @@
             <li><a href="e9/index.html">E9: Visualizing Responsiveness</a></li>
           </ul>
         </div>
-        <div class"col">
+        <div class="col">
           <h3>Projects</h3>
           <ul>
             <li><a href="p1/index.html">P1: Linking Narratives</a></li>
