--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
             <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
             <li><a href="e9/index.html">E9: Visualizing Responsiveness</a></li>
+            <li><a href="link/index.html">link</a></li>
           </ul>
         </div>
         <div class="col">
