--- a/p20/index.html
+++ b/p20/index.html
@@ -13,11 +13,10 @@
       <img src="images/sights.png" alt="sights" >
       <img src="images/24h.png" alt="24h" >
       <h1> 1440 </h1>
-      <img src="images/home.png" alt="home" >
-      <img src="images/about.png" alt="about" >
-      <img src="images/sights.png" alt="sights" >
-      <img src="images/24h.png" alt="24h" >
-
+      <img src="images/1440home.png" alt="home" >
+      <img src="images/1440about.png" alt="about" >
+      <img src="images/1440sight.png" alt="sights" >
+      <img src="images/144024h.png" alt="24h" >
 
   </body>
 
