--- a/e1/index.html
+++ b/e1/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html >
   <head>
+    <link rel="stylesheet"href="../css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title> E1 </title>
   </head>
