--- a/e2/index.html
+++ b/e2/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>e2</title>
+    <link rel="stylesheet"href="../css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   </head>
   <body>
     <h3>Grid 1</h3>
