--- a/e9/index.html
+++ b/e9/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E9</title>
-      <link rel="stylesheet"href="css/main.css">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="stylesheet"href="../css/main.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
