--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title> Jennifer Le</title>
       <link rel="stylesheet"href="css/main.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
@@ -26,6 +25,7 @@
             <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
             <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
             <li><a href="e9/index.html">E9: Patterns</a></li>
+            <li><a href="e10/index.html">E10: Layouts</a></li>
             <li><a href="link/index.html">linking</a></li>
           </ul>
         </div>
@@ -33,8 +33,9 @@
           <h3>Projects</h3>
           <ul>
             <li><a href="p1/index.html">P1: Linking Narratives</a></li>
-            <li><a href="p2/index.html">P2.3: First Mobile Designs</a></li>
+            <li><a href="p2/index.html">P2: First Mobile Designs</a></li>
             <li><a href="p20/index.html">P2.4: Expanding design to 1440px</a></li>
+            <li><a href="p200/index.html">P2.5: Further Refinements</a></li>
           </ul>
         </div>
     </main>
