--- a/p2/index.html
+++ b/p2/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>p2</title>
-    <link rel="stylesheet"href="css/main.css">
+    <link rel="stylesheet"href="../css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   </head>
   <body>
     <body>
