--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
             <li><a href="e9/index.html">E9: Patterns</a></li>
             <li><a href="e10/index.html">E10: Layouts</a></li>
+            <li><a href="e11/index.html">E11: CSS Drawing</a></li>
             <li><a href="link/index.html">linking</a></li>
           </ul>
         </div>
@@ -36,6 +37,8 @@
             <li><a href="p2/index.html">P2: First Mobile Designs</a></li>
             <li><a href="p20/index.html">P2.4: Expanding design to 1440px</a></li>
             <li><a href="p200/index.html">P2.5: Further Refinements</a></li>
+            <li><a href="p2000/index.html">P2: Final</a></li>
+
           </ul>
         </div>
     </main>
