--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="e9/index.html">E9: Patterns</a></li>
             <li><a href="e10/index.html">E10: Layouts</a></li>
             <li><a href="e11/index.html">E11: CSS Drawing</a></li>
+            <li><a href="e12/index.html">E12: E6</a></li>
             <li><a href="link/index.html">linking</a></li>
           </ul>
         </div>
@@ -38,7 +39,7 @@
             <li><a href="p20/index.html">P2.4: Expanding design to 1440px</a></li>
             <li><a href="p200/index.html">P2.5: Further Refinements</a></li>
             <li><a href="p2000/index.html">P2: Final</a></li>
-
+            <li><a href="p3a2/index.html">P3: A2</a></li>
           </ul>
         </div>
     </main>
