--- a/e12/index.html
+++ b/e12/index.html
@@ -4,14 +4,18 @@
  <meta charset="utf-8">
  <title>3col</title>
  <link rel="stylesheet" href="css/main.css">
- <link href="https://fonts.googleapis.com/css?family=Avant+Garde+Gothic" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+  <img src="image/use.jpg" alt"house">
   <div class="sideright">
-    <h1>The</h1>
-    <h1>Secret</h1>
-    <h1>Garden</h1>
+    <h1>The Secret Garden</h1>
     <h3>Frances Hodgson Burnett</h3>
+    <p></p>
+    <p></p>
+    <p></p>
   </div>
 </body>
 </html>
