--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="e9/index.html">E9: Patterns</a></li>
             <li><a href="e10/index.html">E10: Layouts</a></li>
             <li><a href="e11/index.html">E11: CSS Drawing</a></li>
-            <li><a href="e12/index.html">E12: E6</a></li>
+            <li><a href="e12/index.html">E12: Type on Screen II</a></li>
             <li><a href="link/index.html">linking</a></li>
           </ul>
         </div>
