--- a/p3a2/index.html
+++ b/p3a2/index.html
@@ -2,16 +2,13 @@
 <html>
 <head>
  <meta charset="utf-8">
- <title>3col</title>
+ <title>p3</title>
  <link rel="stylesheet" href="css/main.css">
- <link href="https://fonts.googleapis.com/css?family=Avant+Garde+Gothic" rel="stylesheet">
 </head>
 <body>
-  <div class="sideright">
-    <h1>The</h1>
-    <h1>Secret</h1>
-    <h1>Garden</h1>
-    <h3>Frances Hodgson Burnett</h3>
+  <div class="team">
+    <h1>Which team will win this TI?</h1>
+    <button class="button">Team</button>
   </div>
 </body>
 </html>
