--- a/e12/index.html
+++ b/e12/index.html
@@ -4,9 +4,7 @@
  <meta charset="utf-8">
  <title>3col</title>
  <link rel="stylesheet" href="css/main.css">
- <link rel="preconnect" href="https://fonts.gstatic.com">
- <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Poppins:wght@300&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://use.typekit.net/lka2iex.css">
 </head>
 <body>
   <main>
