--- a/e12/index.html
+++ b/e12/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
  <title>3col</title>
  <link rel="stylesheet" href="css/main.css">
  <link rel="stylesheet" href="https://use.typekit.net/lka2iex.css">
