--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <li><a href="e12/index.html">E12: Type on Screen II</a></li>
             <li><a href="e13/index.html">E13: Make it Move</a></li>
             <li><a href="e14/index.html">E14: jQuery </a></li>
+            <li><a href="e15/index.html">E15 </a></li>
+
             <li><a href="link/index.html">linking</a></li>
           </ul>
         </div>
