--- a/e15/index.html
+++ b/e15/index.html
@@ -42,7 +42,7 @@
       <li><a> Select the Size number </a></li>
       <li><a> Type in 10 </a></li>
       <li><a> Export the canvas as PNG</a></li>
-      <li><a> Send to Michael </a></li>
+      <li><a> Send to nle22@masonlive.gmu.edu </a></li>
 
   </ul>
 
