--- a/e15/index.html
+++ b/e15/index.html
@@ -43,8 +43,12 @@
       <li><a> Type in 10 </a></li>
       <li><a> Export the canvas as PNG</a></li>
       <li><a> Send to nle22@masonlive.gmu.edu </a></li>
-
   </ul>
+      <h3>My Pancake:</h3>
+      <img src="image/pancake.png" alt="mine" >
+      <h3>Ethan's pancake:</h3>
+      <img src="image/ethane15.png" alt="ethan" >
+
 
 
   </body>
