--- a/p3a2/index.html
+++ b/p3a2/index.html
@@ -3,14 +3,20 @@
 <head>
  <meta charset="utf-8">
  <title>p3</title>
- <link rel="stylesheet" href="css/main.css">
+ <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.typekit.net/lka2iex.css">
 </head>
 <body>
-  
-  <h1>Which team will win this TI?</h1>
-  <div class="team">
+<h1>Which team will win this TI?</h1>
+  <main>
+    <div class="center">
+      <button id="buttons">Team</button>
+</div>
+    <img id="aegis" src="image/aegis.jpg" alt="aegis">
+  </main>
 
-    <button class="button">Team</button>
-  </div>
+
 </body>
 </html>
