--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="e12/index.html">E12: Type on Screen II</a></li>
             <li><a href="e13/index.html">E13: Make it Move</a></li>
             <li><a href="e14/index.html">E14: jQuery </a></li>
-            <li><a href="e15/index.html">E15 </a></li>
+            <li><a href="e15/index.html">E15: Programmer and Computer </a></li>
 
             <li><a href="link/index.html">linking</a></li>
           </ul>
@@ -43,7 +43,7 @@
             <li><a href="p20/index.html">P2.4: Expanding design to 1440px</a></li>
             <li><a href="p200/index.html">P2.5: Further Refinements</a></li>
             <li><a href="p2000/index.html">P2: Final</a></li>
-            <li><a href="p3a2/index.html">P3: A2</a></li>
+            <li><a href="p3a2/index.html">P3: Which team will win TI?</a></li>
           </ul>
         </div>
     </main>
